--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
     <head>
         <title>Prueba de Git</title>
-        <h1>Prueba de Git</h1>
+        <h1>Prueba de Git2</h1>
         <p>Este es un parrafo de prueba</p>
     </head>
     <body>
