--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <body>
     <head>
-        <title>Prueba de Git</title>
+        <title>Estoy cambiando en mi repositorio en la nube</title>
         <h1>Prueba de Git2</h1>
         <p>Este es un parrafo de prueba</p>
     </head>
